--- a/melody-assesment/Components/App.razor
+++ b/melody-assesment/Components/App.razor
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    <Router />
+    <Router AppAssembly="typeof(Program).Assembly">
+    <Found Context="routeData">
+        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
+    </Found>
+    </Router>   
     <script src="_framework/blazor.web.js"></script>
 </body>
 
