Nav bar changed into other design

--- a/melody-assesment/Components/Layout/NavMenu.razor
+++ b/melody-assesment/Components/Layout/NavMenu.razor
@@ -1,11 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 
 <div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">
-            <img src="images/zineps-logo.svg" alt="Logo" class="zineps-logo" />
-        </a>
-    </div>
+    <a class="navbar-brand" href="">
+        <img src="images/zineps-logo.svg" alt="Logo" class="zineps-logo" />
+    </a>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
@@ -19,7 +17,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link disabled" href="information">
+            <NavLink class="nav-link disabled" href="Information">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> information
             </NavLink>
         </div>
