--- a/melody-assesment/Components/Pages/Information.razor
+++ b/melody-assesment/Components/Pages/Information.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>Information</PageTitle>
 
-<h1>Information</h1>
+<h1>Shipping Information</h1>
 
 <div class="route-layout">
     <!-- Origin -->
@@ -16,8 +16,7 @@
     <!-- Middle column: arrow + dropdown + AI suggestion + date picker -->
     <div class="route-arrow-column">
         <!-- Arrow -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-            stroke-linecap="round" stroke-linejoin="round" class="arrow-icon">
+        <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
             <line x1="5" y1="12" x2="19" y2="12" />
             <polyline points="12 5 19 12 12 19" />
         </svg>
