--- a/melody-assesment/Components/Layout/NavMenu.razor
+++ b/melody-assesment/Components/Layout/NavMenu.razor
@@ -18,13 +18,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link disabled" href="Information">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> information
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Information
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link disabled" href="confirmation">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Confirmation
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Confirm
             </NavLink>
         </div>
 
