Shipping button updated

--- a/melody-assesment/Components/Pages/Home.razor
+++ b/melody-assesment/Components/Pages/Home.razor
@@ -18,7 +18,13 @@
         Start a new shipment with Zineps.
         <br> Click below to begin!
       </p>
-      <button class="btn btn-primary w-100" @onclick="GoToInformation">Create new shipping</button>
+      <button class="next-button" @onclick="GoToInformation">
+        Create new shipping
+        <svg class="next-arrow" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="#fff"
+          stroke-width="2" viewBox="0 0 24 24">
+          <path d="M5 12h14M13 6l6 6-6 6" />
+        </svg>
+      </button>
     </div>
   </div>
 </div>
